# invest-iq

./: .dockerignore  .env.example  .env.features.example  .env.minimal  .env.staging.example  .env.trading.example  .gitignore  ADVANCED_FEATURES.md  ADVANCED_FEATURES_README.md  AI_ML_ENHANCEMENT_RECOMMENDATIONS.md  ALPACA_INTEGRATION_STATUS.md  API_KEY_FIX.md  ARCHITECTURE.md  AUTONOMOUS_QUICK_START.md  AUTONOMOUS_TRADING_SETUP.md  CHANGES_SUMMARY.md  COMPLETE_MONEY_MACHINE.md  Cargo.toml  DISCORD_BOT_GUIDE.md  Dockerfile.agent  Dockerfile.api  Dockerfile.discord  FEATURES_COMPARISON.md  FEATURE_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_HARDENING.md  INTEGRATION_STATUS.md  LICENSE  ML_COMPLETE.md  ML_DEPLOYMENT_CHECKLIST.md  ML_DEPLOYMENT_GUIDE.md  ML_IMPLEMENTATION_SUMMARY.md  MONEY_MACHINE_COMPLETE.md  MONEY_MACHINE_PROGRESS.md  PORTFOLIO_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_TODO.md  QUICKSTART.md  (+33 more)
crates/alpaca-broker/: Cargo.toml
crates/alpaca-broker/src/: client.rs  lib.rs  models.rs  websocket.rs
crates/alpha-decay/: Cargo.toml
crates/alpha-decay/src/: change_detector.rs  health_report.rs  lib.rs  monitor.rs
crates/analysis-core/: Cargo.toml
crates/analysis-core/src/: adaptive.rs  error.rs  lib.rs  traits.rs  types.rs
crates/analysis-orchestrator/: Cargo.toml
crates/analysis-orchestrator/src/: lib.rs  screener.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  models.rs  performance_tracker.rs  signal_analyzer.rs
crates/api-server/: Cargo.toml  build.rs
crates/api-server/src/: agent_trade_routes.rs  alpha_decay_routes.rs  analytics_routes.rs  audit.rs  auth.rs  auth_tests.rs  backtest_routes.rs  broker_routes.rs  brute_force.rs  calibration_routes.rs  correlation_routes.rs  dividend_routes.rs  earnings_routes.rs  embedded_frontend.rs  flow_routes.rs  insider_routes.rs  ip_allowlist.rs  lib.rs  macro_routes.rs  main.rs  ml_routes.rs  options_routes.rs  portfolio_analytics_routes.rs  portfolio_routes.rs  python_manager.rs  request_id.rs  retention_routes.rs  risk_routes.rs  screener_routes.rs  security_headers.rs  sentiment_routes.rs  short_interest_routes.rs  symbol_routes.rs  tax_routes.rs  time_machine_routes.rs  watchlist_routes.rs  ws_routes.rs
crates/api-server/tests/: integration_tests.rs
crates/backtest-engine/: Cargo.toml
crates/backtest-engine/src/: advanced_risk.rs  circuit_breaker.rs  commission.rs  data_quality.rs  db.rs  engine.rs  extended_metrics.rs  factor_attribution.rs  lib.rs  margin.rs  market_impact.rs  models.rs  monte_carlo.rs  order_types.rs  overfitting.rs  regime_risk.rs  short_selling.rs  statistical.rs  tear_sheet.rs  tests.rs  timeframe_agg.rs  trade_analysis.rs  trailing_stop.rs  walk_forward_opt.rs
crates/confidence-calibrator/: Cargo.toml
crates/confidence-calibrator/src/: calibrator.rs  history.rs  lib.rs  uncertainty.rs
crates/data-loader/: Cargo.toml
crates/data-loader/src/: main.rs
crates/desktop-app/: Cargo.toml  tauri.conf.json
crates/desktop-app/capabilities/: default.json
crates/desktop-app/icons/: icon.icns
crates/desktop-app/src/: lib.rs  main.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: chart_render.py  charts.rs  embeds.rs  main.rs
crates/discord-bot/src/commands/: advanced.rs  agent.rs  core.rs  data.rs  market.rs  mod.rs  risk.rs  system.rs  tax.rs  trading.rs
crates/flow-map/: Cargo.toml
crates/flow-map/src/: etf_tracker.rs  lib.rs  rotation.rs  sector_flows.rs
crates/ibkr-broker/: Cargo.toml
crates/ibkr-broker/src/: client.rs  lib.rs  models.rs
crates/invest-iq-data/: Cargo.toml  pyproject.toml
crates/invest-iq-data/src/: bars.rs  client.rs  lib.rs  news.rs  price_changes.rs  tickers.rs
crates/market-regime-detector/: Cargo.toml
crates/market-regime-detector/src/: lib.rs
crates/ml-client/: Cargo.toml
crates/ml-client/src/: bayesian.rs  earnings_nlp.rs  error.rs  lib.rs  price_predictor.rs  provider.rs  sentiment.rs  signal_models.rs  social_sentiment.rs
crates/ml-engine/: Cargo.toml
crates/ml-engine/src/: bayesian.rs  init.rs  lib.rs  price_predictor.rs  sentiment.rs  signal_models.rs
crates/multi-timeframe/: Cargo.toml
crates/multi-timeframe/src/: lib.rs
crates/notification-service/: Cargo.toml
crates/notification-service/src/: lib.rs  smtp.rs  templates.rs
crates/polygon-client/: Cargo.toml
crates/polygon-client/src/: lib.rs  websocket.rs
crates/portfolio-manager/: Cargo.toml
crates/portfolio-manager/src/: alerts.rs  benchmark.rs  db.rs  lib.rs  models.rs  portfolio.rs  rebalancing.rs  reconciliation.rs  risk_metrics.rs  shared_math.rs  tax_integration.rs  trades.rs
crates/quant-analysis/: Cargo.toml
crates/quant-analysis/src/: lib.rs
crates/sentiment-analysis/: Cargo.toml
crates/sentiment-analysis/src/: lib.rs  velocity.rs
crates/time-machine/: Cargo.toml
crates/time-machine/src/: lib.rs  replay.rs  scenarios.rs  scoring.rs
crates/trading-agent/: Cargo.toml
crates/trading-agent/src/: config.rs  discord_notifier.rs  main.rs  market_scanner.rs  metrics.rs  ml_gate.rs  ml_strategy_manager.rs  portfolio_guard.rs  position_manager.rs  state_manager.rs  strategy_manager.rs  trade_executor.rs  types.rs
crates/validation/: Cargo.toml
crates/validation/src/: alpha_vantage.rs  backtesting.rs  comparison.rs  lib.rs  yahoo_finance.rs
docs/: backtest-roadmap.md  deployment.md  mobile-responsive-todo.md  openapi.yaml  runbook.md  secrets-rotation.md
frontend/: .pytest-cheatsheet.md  COVERAGE_MATRIX.md  Dockerfile  FEATURES.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_ENHANCED.md  TESTING.md  TEST_INDEX.md  TEST_SUITE_SUMMARY.md  UX_IMPROVEMENTS.md  app.py  app_enhanced.py  click_to_trade.py  portfolio_app.py  requirements.txt  run_tests.sh  start.bat  start.sh  time_machine_app.py  trading_dashboard.py  trading_dashboard_enhanced.py  validation_app.py
migrations/: 20240101000000_initial_schema.sql  20240102000000_add_audit_and_idempotency.sql  20240104000000_fix_backtest_trades_columns.sql  (+2 more)
ml-services/: Dockerfile  (+11 more)
(+266 files in other folders)
