[workspace]
exclude = ["crates/invest-iq-data", "crates/desktop-app", "crates/desktop-frontend"]
members = [
    "crates/analysis-core",
    "crates/polygon-client",
    "crates/technical-analysis",
    "crates/fundamental-analysis",
    "crates/quant-analysis",
    "crates/sentiment-analysis",
    "crates/analysis-orchestrator",
    "crates/api-server",
    "crates/discord-bot",
    "crates/validation",
    "crates/portfolio-manager",
    "crates/alpaca-broker",
    "crates/backtest-engine",
    "crates/risk-manager",
    "crates/analytics",
    "crates/trading-agent",
    "crates/ml-client",
    "crates/kelly-position-sizer",
    "crates/multi-timeframe",
    "crates/market-regime-detector",
    "crates/news-trading",
    "crates/confidence-calibrator",
    "crates/alpha-decay",
    "crates/smart-watchlist",
    "crates/flow-map",
    "crates/time-machine",
    "crates/tax-optimizer",
    "crates/data-loader",
    "crates/ml-engine",
    "crates/notification-service",
    "crates/broker-trait",
    "crates/ibkr-broker",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["InvestIQ Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }

# Database/Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite", "chrono", "migrate"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Math and statistics
nalgebra = "0.33"
statrs = "0.17"

# Financial precision
rust_decimal = { version = "1.36", features = ["serde-with-float"] }
rust_decimal_macros = "1.36"

# Data structures
dashmap = "6.1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Python integration
pyo3 = { version = "0.27", features = ["auto-initialize"] }

# Embedded frontend
rust-embed = { version = "8", features = ["include-exclude"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"
