[package]
name = "alpaca-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
broker-trait = { path = "../broker-trait" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
