[package]
name = "analysis-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
utoipa = { version = "5", features = ["chrono"], optional = true }

[features]
default = []
openapi = ["dep:utoipa"]
