[package]
name = "backtest-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
rand = "0.8"
rust_decimal = { workspace = true }
