[package]
name = "backtest-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
rand = "0.8"
rayon = "1.10"
rust_decimal = { workspace = true }
statrs = { workspace = true }
