[package]
name = "desktop-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "InvestIQ Desktop Application (Tauri)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"

# Embed the API server directly — single binary
api-server = { path = "../api-server" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
