[package]
name = "discord-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "discord-bot"
path = "src/main.rs"

[dependencies]
analysis-core = { path = "../analysis-core" }
polygon-client = { path = "../polygon-client" }

tokio = { workspace = true }
serenity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

futures = "0.3"

# Chart generation via plotly (Python)
pyo3 = { version = "0.27", features = ["auto-initialize"] }
