[package]
name = "ibkr-broker"
version.workspace = true
edition.workspace = true

[dependencies]
broker-trait = { path = "../broker-trait" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
