[package]
name = "multi-timeframe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
analysis-core = { path = "../analysis-core" }
polygon-client = { path = "../polygon-client" }
technical-analysis = { path = "../technical-analysis" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
