[package]
name = "polygon-client"
version.workspace = true
edition.workspace = true

[dependencies]
analysis-core = { path = "../analysis-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
