[package]
name = "quant-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
analysis-core = { path = "../analysis-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rayon = "1.10"
statrs = { workspace = true }
