[package]
name = "validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
analysis-core = { path = "../analysis-core" }
technical-analysis = { path = "../technical-analysis" }
polygon-client = { path = "../polygon-client" }

# HTTP and async
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Math and statistics
statrs.workspace = true

# Config
dotenvy.workspace = true
